# rv1126b_temp

./: .gitignore  README.md  apply_patch.sh  dual_camera_patch.diff  dual_camera_patch_README.md  dual_camera_patch_rv1126b.diff
app/ipcweb-backend/: costdown-www-rkipc.sh
app/ipcweb-backend/www-rkipc/: index.html
app/lvgl_demo/lvgl8/: evdev.c
app/lvgl_demo/lvgl9/: evdev.c
app/rkadk/: CMakeLists.txt
app/rkadk/examples/: CMakeLists.txt  rkadk_aov_record_test.c  rkadk_disp_test.c  rkadk_dual_disp_test.c  rkadk_media_test.c  rkadk_muxer_test.c  rkadk_photo_test.c  rkadk_player_once_test.c  rkadk_player_test.c  rkadk_record_test.c  rkadk_rtmp_test.c  rkadk_rtsp_test.c  rkadk_setting_test.c  rkadk_storage_test.c  rkadk_stream_test.c  rkadk_thumb_test.c  rkadk_ui_test.c
app/rkadk/include/: rkadk_audio_decoder.h  rkadk_audio_encoder.h  rkadk_common.h  rkadk_demuxer.h  rkadk_hal.h  rkadk_log.h  rkadk_media_comm.h  rkadk_muxer.h  rkadk_osd.h  rkadk_param.h  rkadk_param_map.h  rkadk_photo.h  rkadk_platform_param.h  rkadk_player.h  rkadk_record.h  rkadk_scaler.h  rkadk_storage.h  rkadk_thumb.h  rkadk_type.h  rkadk_ui.h  rkadk_version.h
app/rkadk/inicfg/rk3576/: rkadk_defsetting_sensor_0.ini  rkadk_setting_sensor_1.ini
app/rkadk/inicfg/rv1106_1103/: rkadk_defsetting_sensor_0.ini  rkadk_defsetting_sensor_1.ini  rkadk_setting.ini  rkadk_setting_sensor_1.ini
app/rkadk/inicfg/rv1126_1109/: rkadk_defsetting.ini  rkadk_defsetting_sensor_0.ini  rkadk_setting_sensor_1.ini
app/rkadk/inicfg/rv1126b/: rkadk_defsetting_sensor_0.ini  rkadk_defsetting_sensor_1.ini  rkadk_setting.ini  rkadk_setting_sensor_0.ini
app/rkadk/src/: CMakeLists.txt  SConscript
app/rkadk/src/common/: rkadk_log.c  rkadk_media_comm.c  rkadk_thread.c  rkadk_thumb_comm.c  rkadk_thumb_comm.h  rkadk_version.c
app/rkadk/src/demuxer/: rkadk_demuxer.c
app/rkadk/src/display/: rkadk_disp.c
app/rkadk/src/muxer/: rkadk_muxer.c
app/rkadk/src/param/: rkadk_param.c  rkadk_param_map.c  rkadk_struct2ini.c
app/rkadk/src/photo/: rkadk_photo.c  rkadk_scaler.c
app/rkadk/src/player/: rkadk_player.c
app/rkadk/src/record/: rkadk_record.c
app/rkadk/src/storage/: rkadk_storage.c
app/rkadk/src/stream/: rkadk_stream.c
app/rkadk/src/ui/: rkadk_ui.c
app/rkipc/: CMakeLists.txt  LICENSE
app/rkipc/cmake/: Version.cmake
app/rkipc/common/: common.c  common.h
app/rkipc/common/audio/: audio.c  audio.h  rkaudio_mp3.c  rkaudio_mp3.h
app/rkipc/common/event/: event.c
app/rkipc/common/network/: Rk_wifi.c  network.c
app/rkipc/common/osd/: bmp_reader.c  color_table.c  color_table.h  font_factory.c  osd.c
app/rkipc/common/param/: param.c
app/rkipc/common/player/: player.c  player.h
app/rkipc/common/rockiva/: rockiva.c
app/rkipc/common/roi/: roi.c
app/rkipc/common/rtsp/: rtsp.c
app/rkipc/common/socket_server/: server.c
app/rkipc/common/storage/: storage.c  storage.h
app/rkipc/common/sysutil/: rk_pwm.c  rk_pwm.h
app/rkipc/common/uvc/: rkipc_usb_config.sh  uevent.c  uevent.h  uvc-gadget.c  uvc-gadget.h  uvc_control.c  uvc_control.h  uvc_encode.c  uvc_encode.h  uvc_video.cpp  uvc_video.h  yuv.c  yuv.h
app/rkipc/common/venc/: venc.c  venc.h
app/rkipc/docs/: Rockchip_Developer_Guide_Linux_RKIPC_CN.md  Rockchip_Developer_Guide_Linux_RKIPC_EN.md
app/rkipc/src/rk3576_dv/: CMakeLists.txt  RkLunch.sh  asound.conf  main.c  rkipc-imx386-1200w-30fps.ini  rkipc-imx386-200w-120fps.ini  rkipc-imx386-800w-30fps-timelapse.ini  rkipc-imx386-800w-30fps.ini  rkipc-imx386-800w-58fps.ini
app/rkipc/src/rk3576_dv/ui/: filelist.c  rk_ui.c  ui_advanced_setup.c  ui_dialog.c  ui_dialog.h  ui_dialog_format.c  ui_dialog_storage.c  ui_gallery.c  ui_main.c  ui_main_view.c  ui_photo_player.c  ui_player.h  ui_playlist.c  ui_resource_manage.c  ui_resource_manage.h  ui_settings.c  ui_settings.h  ui_video_player.c
app/rkipc/src/rk3576_dv/video/: rkeis_config_imx386_4032x2256_3840x2160_30fps-distortion.json  rkeis_config_imx386_4032x2256_3840x2160_30fps.json  rkeis_config_imx386_4032x2256_3840x2160_60fps.json  rkeis_config_imx386_704x384_704x384_30fps-distortion.json  rkeis_config_imx386_704x384_704x384_30fps.json  rkeis_config_imx386_horizon_4032x3016_3840x2160_30fps.json  rkeis_config_imx386_horizon_704x512_672x368_30fps.json  video.c  video.h
app/rkipc/src/rk3576_ipc/: CMakeLists.txt  main.c  rkipc.ini
app/rkipc/src/rk3576_multi_ipc/: CMakeLists.txt  main.c  rkipc-3x.ini
app/rkipc/src/rk3588_ipc/: CMakeLists.txt  main.c  rkipc.ini
app/rkipc/src/rk3588_multi_ipc/: CMakeLists.txt  rkipc-4x.ini  rkipc-6x-no-blend-hor.ini  rkipc-6x.ini  rkipc-8x.ini
app/rkipc/src/rv1103_ipc/: CMakeLists.txt  RkLunch.sh  main.c  rkipc-1920x1080-rv1103b.ini  rkipc-1920x1080.ini  rkipc-2304x1296-rv1103b.ini  rkipc-2304x1296.ini  rkipc-2560x1440-rv1103b.ini  rkipc-2560x1440.ini  rkipc-2688x1520-rv1103b.ini  rkipc-2688x1520.ini  rkipc-2880x1616-rv1103b.ini  rkipc-2880x1616.ini
app/rkipc/src/rv1106_aiisp_ipc/: CMakeLists.txt  rkipc-1920x1080-rv1103b.ini  rkipc-1920x1080.ini  rkipc-2560x1440-rv1103b.ini  rkipc-2560x1440.ini  rkipc-2688x1520-rv1103b.ini  rkipc-2688x1520.ini
app/rkipc/src/rv1126b_dv/: CMakeLists.txt  RkLunch.sh  main.c  rkipc-gc8613.ini  rkipc-imx586.ini  rkipc.ini
app/rkipc/src/rv1126b_dv/ui/: filelist.c  filelist.h  rk_ui.c  ui_advanced_setup.c  ui_audio_setup.c  ui_auto_test.c  ui_dialog.c  ui_dialog.h  ui_dialog_format.c  ui_dialog_format.h  ui_dialog_storage.c  ui_dialog_storage.h  ui_gallery.c  ui_main.c  ui_main_view.c  ui_photo_player.c  ui_playlist.c  ui_resource_manager.c  ui_resource_manager.h  ui_settings.c  ui_video_player.c  ui_video_setup.c
app/rkipc/src/rv1126b_dv/video/: rkeis_config_no_comp_3840x2160_3840x2160_30fps.json  rkeis_config_no_comp_4000x3000_3840x2160_30fps.json  rkeis_config_normal_1440x1080_1440x1080_30fps.json  rkeis_config_normal_1920x1080_1920x1080_30fps.json  rkeis_config_normal_3840x2160_3840x2160_30fps.json  rkeis_config_normal_4000x3000_3840x2160_30fps.json  video.c  video.h
app/vi_grab_frame/: CMakeLists.txt  vi_grab_avs.c  vi_grab_dual.c  vi_grab_frame.c
(+198 files in other folders)
